--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -22,6 +22,9 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "${{ matrix.python-version }}"
+    - name: Install pytest
+      run: |
+        python -m pip install pytest
     - name: Test
       run: |
         python -m pytest --doctest-modules
